add pagination info to response